kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_rw_txn/test_0.stderr
error: Expected at least 1 arguments, got 0.
 --> $DIR/test_0.rs:5:1
  |
5 | #[require_binary_rw_txn]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
